update security classes